--- a/assets/scss/layout/_content.scss
+++ b/assets/scss/layout/_content.scss
@@ -13,7 +13,7 @@
 .achievements__table {
     tr:not(:last-child) {
         td {
-            padding-bottom: 0.5rem;
+            padding-bottom: 0.625rem;
         }
     }
 }
